fix: adjust layers - drawer and collapse (#4183)
* move parts from card, carouse, and chat from modifier to component layer

* docs: remove a high z-index from drawer example

* move collapse open status classes to modifier layer to allow animating status icons

* move drawer-end class in modifier.placement layer for lower priority

--- a/packages/daisyui/src/components/collapse.css
+++ b/packages/daisyui/src/components/collapse.css
@@ -83,6 +83,17 @@
       }
     }
 
+    > input:is([type="checkbox"], [type="radio"]) {
+      z-index: 1;
+      width: 100%;
+      padding: 1rem;
+      padding-inline-end: 3rem;
+      min-height: 1lh;
+      transition: background-color 0.2s ease-out;
+    }
+  }
+
+  @layer daisyui.modifier {
     &:is([open]) {
       &.collapse-arrow {
         > .collapse-title:after {
@@ -142,15 +153,6 @@
       > input:is([type="checkbox"], [type="radio"]):checked ~ .collapse-title:after {
         content: "−";
       }
-    }
-
-    > input:is([type="checkbox"], [type="radio"]) {
-      z-index: 1;
-      width: 100%;
-      padding: 1rem;
-      padding-inline-end: 3rem;
-      min-height: 1lh;
-      transition: background-color 0.2s ease-out;
     }
   }
 }
