--- a/packages/daisyui/src/components/drawer.css
+++ b/packages/daisyui/src/components/drawer.css
@@ -72,7 +72,7 @@
 }
 
 .drawer-end {
-  @layer daisyui.modifier {
+  @layer daisyui.modifier.placement {
     grid-auto-columns: auto max-content;
 
     > .drawer-toggle {
